--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,88 @@
 
+name: Build HarryWrt (OpenWrt 24.10.5 x86_64 EFI)
+
+on:
+  workflow_dispatch:
+  push:
+    tags:
+      - "v*"
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Install build deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+            gettext git libncurses5-dev libssl-dev python3 python3-distutils rsync \
+            unzip zlib1g-dev file wget
+
+      - name: Clone OpenWrt v24.10.5
+        run: |
+          git clone https://git.openwrt.org/openwrt/openwrt.git openwrt
+          cd openwrt
+          git checkout v24.10.5
+
+      - name: Update feeds
+        run: |
+          cd openwrt
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
+
+      - name: Apply config
+        run: |
+          cd openwrt
+          cp ../configs/x86_64.config .config
+          make defconfig
+
+      - name: DIY branding (optional)
+        run: |
+          cd openwrt
+          bash ../scripts/diy.sh
+
+      - name: Download sources
+        run: |
+          cd openwrt
+          make download -j"$(nproc)" V=s
+
+      - name: Build firmware
+        run: |
+          cd openwrt
+          make -j"$(nproc)" V=s
+
+      - name: Collect artifacts
+        run: |
+          set -e
+          mkdir -p out
+          cd openwrt
+          ls -lah bin/targets/x86/64 || true
+          # x86_64 EFI combined image (gz)
+          IMG="$(ls -1 bin/targets/x86/64/*combined-efi.img.gz | head -n 1)"
+          if [ -z "$IMG" ]; then
+            echo "ERROR: combined-efi.img.gz not found"
+            exit 1
+          fi
+          cp "$IMG" ../out/HarryWrt-24.10.5-x86-64-efi.img.gz
+          cd ..
+          sha256sum out/* | tee out/SHA256SUMS.txt
+
+      - name: Upload artifact (Actions)
+        uses: actions/upload-artifact@v4
+        with:
+          name: HarryWrt-24.10.5-x86-64-efi
+          path: out/*
+
+      - name: Create GitHub Release (on tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            out/HarryWrt-24.10.5-x86-64-efi.img.gz
+            out/SHA256SUMS.txt
+          generate_release_notes: true
