--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,6 @@ on:
           - both
           - clean
           - passwall2
-
       release_version:
         description: "HarryWrt release version (e.g. v1.0)"
         required: true
@@ -73,10 +72,6 @@ jobs:
             rel="${{ inputs.release_version }}"
           else
             tag="${GITHUB_REF##*/}"
-
-            # Expected formats:
-            # clean-24.10.5-v1.0
-            # pw2-24.10.5-v1.0
             if [[ "$tag" =~ ^(clean|pw2)-24\.10\.5-(v[0-9]+(\.[0-9]+){0,2})$ ]]; then
               profile="${BASH_REMATCH[1]}"
               rel="${BASH_REMATCH[2]}"
@@ -86,19 +81,17 @@ jobs:
             fi
           fi
 
-          # Map tag profile to matrix id
-          want_matrix="no"
-          if [[ "$profile" == "clean" && "${{ matrix.id }}" == "clean" ]]; then want_matrix="yes"; fi
-          if [[ "$profile" == "pw2" && "${{ matrix.id }}" == "passwall2" ]]; then want_matrix="yes"; fi
-
-          # workflow_dispatch "both" will set profile to matrix.id above
+          want="no"
           if [[ "${{ github.event_name }}" == "workflow_dispatch" && "${{ inputs.profile }}" == "both" ]]; then
-            want_matrix="yes"
+            want="yes"
+          else
+            if [[ "$profile" == "clean" && "${{ matrix.id }}" == "clean" ]]; then want="yes"; fi
+            if [[ "$profile" == "pw2" && "${{ matrix.id }}" == "passwall2" ]]; then want="yes"; fi
           fi
 
           echo "base=$base" >> "$GITHUB_OUTPUT"
           echo "release=$rel" >> "$GITHUB_OUTPUT"
-          echo "want=$want_matrix" >> "$GITHUB_OUTPUT"
+          echo "want=$want" >> "$GITHUB_OUTPUT"
 
       - name: Skip unselected profile
         if: steps.meta.outputs.want != 'yes'
@@ -107,42 +100,99 @@ jobs:
           exit 0
 
       - name: Free disk space and enable swap
+        shell: bash
         run: |
+          set -euo pipefail
+
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
-
-          sudo fallocate -l 8G /swapfile
-          sudo chmod 600 /swapfile
-          sudo mkswap /swapfile
-          sudo swapon /swapfile
-
           df -h
 
+          if sudo swapon --show | grep -q '/swapfile'; then
+            sudo swapoff /swapfile || true
+          fi
+          if [ -e /swapfile ]; then
+            sudo rm -f /swapfile || true
+          fi
+
+          SWAP_PATH="/swapfile"
+          if ! sudo fallocate -l 8G "$SWAP_PATH" 2>/dev/null; then
+            SWAP_PATH="/swapfile2"
+            sudo rm -f "$SWAP_PATH" || true
+            sudo fallocate -l 8G "$SWAP_PATH"
+          fi
+
+          sudo chmod 600 "$SWAP_PATH"
+          sudo mkswap "$SWAP_PATH"
+          sudo swapon "$SWAP_PATH"
+
+          echo "Swap enabled:"
+          sudo swapon --show
+
       - name: Install build dependencies
+        shell: bash
         run: |
+          set -euo pipefail
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            build-essential clang flex bison g++ gawk gettext git \
-            libncurses-dev libssl-dev python3-setuptools rsync unzip zlib1g-dev \
-            file wget curl ca-certificates gcc-multilib g++-multilib time
+            build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+            gettext git libncurses-dev libssl-dev rsync unzip zlib1g-dev \
+            file wget curl ca-certificates time \
+            python3 python3-distutils python3-setuptools python3-pyelftools \
+            gperf swig \
+            subversion mercurial
+
+          python3 --version
+          git --version
+          svn --version
 
       - name: Clone OpenWrt source
+        shell: bash
         run: |
+          set -euo pipefail
           git clone --depth=1 --branch v24.10.5 https://github.com/openwrt/openwrt.git openwrt
+
+      - name: Initialize logs
+        shell: bash
+        run: |
+          set -euo pipefail
+          : > openwrt/build.log
 
       - name: Add Passwall feeds
         if: matrix.add_passwall_feeds
+        shell: bash
         run: |
           set -euo pipefail
           cd openwrt
           echo "src-git passwall_packages https://github.com/Openwrt-Passwall/openwrt-passwall-packages.git;main" >> feeds.conf.default
           echo "src-git passwall2 https://github.com/Openwrt-Passwall/openwrt-passwall2.git;main" >> feeds.conf.default
 
-      - name: Update and install feeds
+      - name: Update and install feeds (force + verify)
+        shell: bash
         run: |
           set -euo pipefail
           cd openwrt
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
+
+          echo "feeds.conf.default:"
+          sed -n '1,200p' feeds.conf.default | tee -a build.log
+
+          ./scripts/feeds update -a -f 2>&1 | tee -a build.log
+
+          for d in packages luci routing telephony; do
+            if [ ! -d "feeds/$d" ]; then
+              echo "Missing feed directory: feeds/$d" | tee -a build.log
+              echo "Listing feeds/:" | tee -a build.log
+              ls -la feeds 2>&1 | tee -a build.log || true
+              echo "Retrying feeds update..." | tee -a build.log
+              ./scripts/feeds update -a -f 2>&1 | tee -a build.log
+              break
+            fi
+          done
+
+          for d in packages luci routing telephony; do
+            test -d "feeds/$d"
+          done
+
+          ./scripts/feeds install -a -f 2>&1 | tee -a build.log
 
       - name: Cache downloads (dl)
         uses: actions/cache@v4
@@ -155,6 +205,7 @@ jobs:
             dl-cache-
 
       - name: Apply config and run DIY
+        shell: bash
         run: |
           set -euo pipefail
           cd openwrt
@@ -176,9 +227,9 @@ jobs:
           fi
 
           chmod +x ../scripts/diy.sh
-          bash ../scripts/diy.sh
+          bash ../scripts/diy.sh 2>&1 | tee -a build.log
 
-          make defconfig
+          make defconfig 2>&1 | tee -a build.log
 
           if [[ "${{ matrix.enforce_no_rust }}" == "true" ]]; then
             grep -q '^CONFIG_PACKAGE_rust=n' .config
@@ -186,16 +237,18 @@ jobs:
           fi
 
       - name: Download sources
+        shell: bash
         run: |
           set -euo pipefail
           cd openwrt
-          make download -j$(nproc)
+          make download -j$(nproc) 2>&1 | tee -a build.log
 
       - name: Build firmware
+        shell: bash
         run: |
           set -euo pipefail
           cd openwrt
-          make -j$(nproc) 2>&1 | tee build.log
+          make -j$(nproc) 2>&1 | tee -a build.log
 
       - name: Upload build log
         if: always()
