--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -3,6 +3,8 @@ CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_IMAGES_GZIP=y
 
+CONFIG_TARGET_ROOTFS_PARTSIZE=2048
+
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-theme-argon=y
