--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -16,6 +16,8 @@ CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
 
+# DNS (avoid variant conflicts)
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 
 CONFIG_PACKAGE_ip-full=y
