--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -11,17 +11,16 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-theme-argon=y
 
 # ------------------------------------------------------------
-# Tools
+# Tools & Libraries
 # ------------------------------------------------------------
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
-
-# Common runtime library (important for many third-party packages)
 CONFIG_PACKAGE_libstdcpp=y
 
 # ------------------------------------------------------------
@@ -45,46 +44,32 @@ CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_iptables-nft=y
 
-# Prefer dnsmasq-full for advanced features
+# ------------------------------------------------------------
+# DNS Services (Prefer dnsmasq-full)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq is not set
 
 # ------------------------------------------------------------
-# Kernel: core plumbing (commonly required by proxy stacks)
+# Kernel: Modern nftables & TProxy base (proxy-friendly)
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-tun=y
-
-CONFIG_PACKAGE_kmod-nf-conntrack=y
-CONFIG_PACKAGE_kmod-nf-conntrack6=y
-CONFIG_PACKAGE_kmod-nf-nat=y
-CONFIG_PACKAGE_kmod-nfnetlink=y
-
-# Extra safety: common netfilter helpers used by various apps
-CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-nf-log=y
-
-# ------------------------------------------------------------
-# Kernel: nftables proxy helpers (TProxy path in fw4/nft world)
-# ------------------------------------------------------------
+CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 
 # ------------------------------------------------------------
-# Kernel: iptables compatibility (some third-party scripts still check these)
+# Kernel: iptables compatibility (legacy scripts)
+# Keep minimal; deps will be pulled automatically if needed.
 # ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-ipt-core=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
-CONFIG_PACKAGE_kmod-ipt-conntrack=y
-CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
-# Bridge/netfilter (often needed in virtualization / bridged LAN setups)
-CONFIG_PACKAGE_kmod-br-netfilter=y
-
 # ------------------------------------------------------------
-# ipset chain (legacy but still required by many third-party tools)
+# NOTE:
+# Do not force ipset / kmod-ipt-ipset here.
+# Official OpenWrt 24.10.x repos may not provide a compatible ipset chain.
+# Third-party proxy stacks should rely on nftables where possible.
 # ------------------------------------------------------------
-CONFIG_PACKAGE_libipset13=y
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_kmod-ipt-ipset=y
